tests/ui/traits/non_lifetime_binders/late-bound-assoc-type.stderr
error[E0658]: associated type defaults are unstable
  --> $DIR/late-bound-assoc-type.rs:8:5
   |
LL |     type Assoc<'a> = i32;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29661 <https://github.com/rust-lang/rust/issues/29661> for more information
   = help: add `#![feature(associated_type_defaults)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0601]: `main` function not found in crate `late_bound_assoc_type`
  --> $DIR/late-bound-assoc-type.rs:18:2
   |
LL | }
   |  ^ consider adding a `main` function to `$DIR/late-bound-assoc-type.rs`

error: cannot capture late-bound type parameter in nested `impl Trait`
  --> $DIR/late-bound-assoc-type.rs:12:58
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc = impl Trait<T>> {
   |                          - parameter defined here        ^

error[E0107]: missing generics for associated type `Trait::Assoc`
  --> $DIR/late-bound-assoc-type.rs:12:39
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc = impl Trait<T>> {
   |                                       ^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/late-bound-assoc-type.rs:8:10
   |
LL |     type Assoc<'a> = i32;
   |          ^^^^^ --
help: add missing lifetime argument
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc<'a> = impl Trait<T>> {
   |                                            ++++

error[E0107]: missing generics for associated type `Trait::Assoc`
  --> $DIR/late-bound-assoc-type.rs:12:39
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc = impl Trait<T>> {
   |                                       ^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/late-bound-assoc-type.rs:8:10
   |
LL |     type Assoc<'a> = i32;
   |          ^^^^^ --
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing lifetime argument
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc<'a> = impl Trait<T>> {
   |                                            ++++

error[E0277]: the trait bound `{integer}: Trait<()>` is not satisfied
  --> $DIR/late-bound-assoc-type.rs:12:17
   |
LL | fn produce() -> impl for<T> Trait<(), Assoc = impl Trait<T>> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<()>` is not implemented for `{integer}`
...
LL |     16
   |     -- return type was inferred to be `{integer}` here
   |
help: this trait has no implementations, consider adding one
  --> $DIR/late-bound-assoc-type.rs:7:1
   |
LL | trait Trait<T: ?Sized> {
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0107, E0277, E0601, E0658.
For more information about an error, try `rustc --explain E0107`.
